--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,12 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h2>TOP MOVIES ACCORDING TO HARISH</h2>
+<h3>Top Three best movies </h3>
+<hr/>
+
+<h4>3 Idiots</h4>
+<p>Educational,Comdedy,Emotional</p>
+
+<h4>Avengers</h4>
+<p>Its sci-fi. I love this genre.</p>
+
+<h4>Attack on titan</h4>
+<p>This anime is awesome with best fight scenes best story. Higly recommended to you for watching</p>
